crates/plotnik-tests/tests/03-analyze/mutual_recursion/no_escape_two_cycles_report_separately.txt
A = (a (B))
B = (b (A))
C = (c (D))
D = (d (C))
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:2:9
  |
1 | A = (a (B))
  |         - references B (completing cycle)
2 | B = (b (A))
  | --------^--
  | |       |
  | |       references A
  | B is defined here
  |
help: add an alternative to `A` or `B` that does not reference any definition in this cycle

error: infinite recursion: no escape path
 --> query.ptk:4:9
  |
3 | C = (c (D))
  |         - references D (completing cycle)
4 | D = (d (C))
  | --------^--
  | |       |
  | |       references C
  | D is defined here
  |
help: add an alternative to `C` or `D` that does not reference any definition in this cycle
-------------------- SYMBOLS ---------------------
A
  B
    A (cycle)
B
  A
    B (cycle)
C
  D
    C (cycle)
D
  C
    D (cycle)
